fix: Fixed several style and layout issues

--- a/src/app/dashboard-module/domain-module/changelog/changelog.component.css
+++ b/src/app/dashboard-module/domain-module/changelog/changelog.component.css
@@ -48,6 +48,11 @@ tr.element-row:not(.expanded-row):active {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
+/* fix layout issues */
+:host /deep/ .mat-paginator-container {
+  min-height: auto;
+}
+
 h1 {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
   font-size: x-large;
