--- a/src/app/dashboard-module/domain-module/components/components.component.css
+++ b/src/app/dashboard-module/domain-module/components/components.component.css
@@ -97,4 +97,8 @@
   .options-section-label {
     display: none;
   }
+
+  .label-env-name {
+    font-size: unset;
+  }
 }
