--- a/src/app/dashboard-module/domain-module/metric-module/metric-data/metric-data.component.css
+++ b/src/app/dashboard-module/domain-module/metric-module/metric-data/metric-data.component.css
@@ -53,6 +53,11 @@ tr.element-row:not(.expanded-row):active {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
+/* fix layout issues */
+:host /deep/ .mat-paginator-container {
+  min-height: auto;
+}
+
 .tablelog-footer {
   columns: 2;
   background: white;
